--- a/css/mechworx.webflow.css
+++ b/css/mechworx.webflow.css
@@ -516,6 +516,10 @@ figcaption {
 }
 
 .page-padding.home {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   padding-top: 0px;
   padding-bottom: 0px;
   -ms-grid-columns: 4.5fr 3fr;
@@ -5581,7 +5585,7 @@ figcaption {
   }
 
   .image-2 {
-    display: none;
+    display: block;
   }
 
   .menu-content.services {
